changed color palette and animated the title

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,6 +9,8 @@
   <script src="./js/main.js"></script></script>
   <title>to-do list</title>
 </head>
+
+
 <body>
   <div class="container">
     <div class="wrapper-list">
@@ -16,7 +18,13 @@
         <h1>To-do</h1>
       </div>
       <div class="list-topics">
+        <label for="itemInput" class="add-item">Add Item:</label>
+        <input type="text" class="form-control" name="" id="itemInput" >
       </div>
+      <div class="buttons">
+        <button id="addListBtn">Add List</button>
+        <button id="clearListBtn">Clear List</button>
+      <div>
     </div>
   </div>
 </body>
