--- a/assets/index.html
+++ b/assets/index.html
@@ -6,26 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <script src="./js/main.js"></script></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>to-do list</title>
 </head>
 
 
 <body>
-  <div class="container">
+  <div class="input-container">
     <div class="wrapper-list">
       <div class="title">
         <h1>To-do</h1>
       </div>
-      <div class="list-topics">
+      <form class="list-topics">
         <label for="itemInput" class="add-item">Add Item:</label>
-        <input type="text" class="form-control" name="" id="itemInput" >
-      </div>
+        <input type="text" class="to-do-input" name="">
+        <button class="to-do-btn">
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </form>
       <div class="buttons">
         <button id="addListBtn">Add List</button>
         <button id="clearListBtn">Clear List</button>
       <div>
     </div>
   </div>
+  <div class="to-do-container">
+    <ul class="to-do-list">
+      
+    </ul>
+  </div>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
